# Koolaine

experiments/clickndrag/: Cargo.toml
experiments/clickndrag/src/: main.rs
experiments/hovershower/client/: Cargo.toml  README.md
experiments/hovershower/client/src/: main.rs
experiments/hovershower/server/: Program.cs
experiments/konvord/extension/: content.js  manifest.json  popup.html  popup.js
experiments/linkah/chat-api-exploration/: arresting.py  build.ps1  chat.rest  chat.rest.json  idk.ipynb  prompt.json  prompt.txt  restanal.py
experiments/linkah/line-tagger/: build-thin.py  build-work.py  collect-responses.py  do-work.py  prompt-template.jinja  requests.json  responses.json  thin.json
experiments/linkah/line-tagger-2/: 0-clean-rectify-work.py  0-clean-work.py  1-build-tagging-work.py  2-do-tagging-work.py  3-build-tagging-generated.py  4-build-rectify-work.py  5-do-rectify-work.py  6-build-rectify-generated.py  7-build-json.py  input.txt  requests.rest  responses.json
experiments/linkah/line-tagger-3/: .pseudo  input.txt  load-model.rest  main.py  main2.py  output1.txt  pipeline.ipynb
experiments/linkah/rest-client-marketplace/: asd.html  pull.ps1
experiments/linkah/work-api-test/: explore.rest  server.py
experiments/monitorinfo/: Cargo.toml
experiments/monitorinfo/src/: main.rs
experiments/namedpipes/: namedpipes.sln
experiments/namedpipes/sharpie/: Program.cs
experiments/ocr/: donut.ipynb  layoutlmv2.ipynb
experiments/onedrive/: Cargo.toml
experiments/onedrive-dotnet/: Program.cs  onedrive-dotnet.csproj
experiments/onedrive/src/: main.rs
experiments/picker/: circle.py  circle2.py  picker.ipynb  pyproject.toml
experiments/screengrab/: .gitignore  Cargo.toml
experiments/screengrabenhanced/: Cargo.toml
experiments/talk2glados/: architecture.md  flatten-notebook.ipynb  glados-tts-upstream.code-workspace  glados.rest  server.ipynb
experiments/windows-media-player/: explore.ipynb  grab.ipynb
experiments/zoomy/: Cargo.toml
experiments/zoomy/examples/: screenshots.rs
experiments/zoomy/src/: main.rs
(+833 files in other folders)
