[package]
name = "onedrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
structopt = "0.3.26"
winapi = { version = "0.3.9", features = ["fileapi", "handleapi", "winbase", "winnt", "errhandlingapi"] }
