[package]
name = "zoomy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.1.3"
image = "0.24.7"
minifb = "0.25.0"
rsautogui = "0.2.2"
scrap = "0.5.0"
winit = "0.28.7"
winapi = { version = "0.3", features = ["wingdi", "windef", "winuser"] }
screenshots = "0.8.4"
mouse-rs = "0.4.2"
anyhow = "1.0.75"


[[bin]]
name = "zoomy"
path = "src/main.rs"
[profile.release]
lto = true
codegen-units = 1
[package.metadata]
windows_subsystem = "windows"