[package]
name = "zoomy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
minifb = "0.25.0"
screenshots = "0.8.4"
mouse-rs = "0.4.2"
anyhow = "1.0.75"


[[bin]]
name = "zoomy"
path = "src/main.rs"
[profile.release]
lto = true
codegen-units = 1
[package.metadata]
windows_subsystem = "windows"