[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
tokio = { version = "1.32.0", features = ["net", "full"] }
tokio-named-pipes = "0.1.0"
windows-sys = "0.48.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24.7"
scrap = "0.5.0"
sdl2 = { version = "0.34", features = ["image"] }
structopt = "0.3.26"
winapi = { version = "0.3.9", features = ["wingdi", "windef", "winuser"] }
